Fixed background in media, and trending today cards not showing

--- a/css/media.css
+++ b/css/media.css
@@ -11,7 +11,7 @@ body{
   align-items: center;            
   background-color: rgba(0, 0, 0, 0.2); 
   padding: 15px 30px;             
-  margin-bottom: 40px;
+  margin-bottom: 15px;
 }
 
 #titleLink{
